--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ games <- read_csv("games.csv")
 
 In most professional sports, teams win more often when they play games at home as opposed to away (Moskowitz & Wertheim, 2012, p. 111). Sports analysts have attributed this phenomenon, known as the home court advantage, to a variety of factors — including the impact of hometown crowds on both gameplay and refereeing (i.e., resulting in refereeing biases toward the home team), tiring scheduling and travel for the visiting team, and unique arena characteristics that the home team is comfortable with (Moskowitz & Wertheim, 2012, p. 116-167). In this project, I attempted to quantify the home court advantage in National Basketball Association games using NBA Stats data from 2003-2019 (Lauga, 2022). 
 
-I hypothesized that home teams in the NBA (from 2003-2019) (1) won more games and (2) scored more points than visiting teams. My explanatory variable was whether a team is playing at home or away (which is binary). For each game, there is one team in each of these categories. I looked at two outcome variables to interrogate the two (related) parts of my hypothesis. First, I looked at whether or not a team won (which is binary). Second, I looked at how many points a team scored. These variables are related because whichever team scored the greater number of points wins the game. However, it was useful to look at both in order to quantify (1) how much more often the home vs. away team won and (2) how many more points the home vs. away team scored on average.
+I hypothesized that home teams in the NBA (from 2003-2019) (1) won more games and (2) scored more points than visiting teams. My explanatory variable was whether a team is playing at home or away (which is binary). For each game, there is one team in each of these categories. I looked at two outcome variables to investigate the two (related) parts of my hypothesis. First, I looked at whether or not a team won (which is binary). Second, I looked at how many points a team scored. These variables are related because whichever team scored the greater number of points wins the game. However, it was useful to look at both in order to quantify (1) how much more often the home vs. away team won and (2) how many more points the home vs. away team scored on average.
 
 If the home team won games at a significantly higher rate than the visiting team, this would provide support for my hypothesis; if the win rate was similar (or the visiting team won more games), this would provide evidence against my hypothesis. If the home team scored significantly more points on average compared to the visiting team, this would provide support for my hypothesis; if their average scores were similar (or the visiting team scored more points on average), this would provide evidence against my hypothesis.
 
@@ -56,7 +56,7 @@ load("wins_regression_barchart.RData")
 wins_regression_barchart
 ```
 
-According to the model, NBA home teams won 18.86% more than visiting teams from 2003-2019. Visiting teams won 40.57% of the time and home teams won 59.43% of the time. These results are significant at p < 0.05 and p < 0.01. The p-value was so small that R rounded it to zero. This means that if the null hypothesis is true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. In other words, the relationship between whether a team plays at home or away and whether they win is very strong.
+According to the model, NBA home teams won 18.86% more than visiting teams from 2003-2019. Visiting teams won 40.57% of the time and home teams won 59.43% of the time. These results are significant at p < 0.05 and p < 0.01. The p-value was so small that R rounded it to zero. This means that if the null hypothesis was true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. In other words, the relationship between whether a team plays at home or away and whether they win is very strong.
 
 ### Regression #2: Points
 
@@ -69,7 +69,7 @@ load("pts_regression_boxplot.RData")
 pts_regression_boxplot
 ```
 
-According to the model, NBA home teams scored an average of 3.01 more points than visiting teams from 2003-2019. Visiting teams scored an average of 98.69 points and home teams scored an average of 101.71 points. These results are significant at p < 0.05 and p < 0.01. The p-value is extremely small: 1.11e-135. This means that if the null hypothesis is true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. Therefore, the relationship between whether a team plays at home or away and how much they scored is very strong.
+According to the model, NBA home teams scored an average of 3.01 more points than visiting teams from 2003-2019. Visiting teams scored an average of 98.69 points and home teams scored an average of 101.71 points. These results are significant at p < 0.05 and p < 0.01. The p-value is extremely small: 1.11e-135. This means that if the null hypothesis was true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. Therefore, the relationship between whether a team plays at home or away and how much they scored is very strong.
 
 ### Potential confounders
 
@@ -77,13 +77,13 @@ The regressions show a highly statistically significant, positive relationship b
 
 However, this data set also includes playoff games — which are more complicated. In the playoffs, teams play best of seven. The higher-seeded (and likely stronger) team hosts the first, second, fifth, and seventh game, and the lower-seeded (and likely weaker) team hosts the third, fourth, and sixth game. As a result, the stronger team often plays more games at home. Both teams play the same number of games at home and away if the series goes to four or six games; but if it goes to five or seven games, the higher-seeded teams play more at home. Therefore, higher-seeded/stronger teams disproportionately play at home during the playoffs and lower-seeded/relatively weaker teams disproportionately play away during the playoffs, which could present a possible confounder. Furthermore, regardless of how many games are played at home, the higher-seeded teams play their games earlier in the series — when they could possibly be less tired or less likely to have injured players. This could further bolster the advantage of home teams (on average) during the playoffs.
 
-To evaluate this concern, I ran a bivariate regression and considered the variable Playoffs (described in the Data section) along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this confounder had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering whether a game was a playoff or regular season game.
+To evaluate this concern, I ran a bivariate regression and considered the variable Playoffs (described in the Data section) along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering whether a game was a playoff or regular season game.
 
-Another potential confounder I looked at was when the game was played. The league has made several changes to game play in recent years — such as introducing the Coach’s Challenge in 2019 — that could’ve affected home court bias over time. I ran a bivariate regression that considered the Season along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this confounder had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering the season a game was played. After ruling out these potential confounders — although there may be more that I am missing — I believe that the coefficients that I found represent a causal effect. 
+Another potential confounder I looked at was when the game was played. The league has made several changes to game play in recent years — such as introducing the Coach’s Challenge in 2019 — that could’ve affected home court bias over time. I ran a bivariate regression that considered the Season along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering the season a game was played. After ruling out these potential confounders — although there may be more that I am missing — I believe that the coefficients that I found represent a causal effect. 
 
 # Conclusion
 
-I found support for my hypotheses that home teams in the NBA (from 2003-2019) won more games and scored more points than visiting teams.According to my analysis, from 2003-2019 in the NBA, teams won about 19% more and scored about 3 more points on average when they played at home. One limit to my analysis was its limited time scope between 2003 and 2019. In the future, I would like to follow up this project with more historical analyses, post-COVID analysis (especially in a few years when there is more data), and analysis of the NBA Bubble during the pandemic. Looking at pandemic games would present analytical challenges (which is why I avoided it in this project), but also the opportunity to analyze games held under a wider variety of conditions than normal (i.e., with and without crowds). 
+I found support for my hypotheses that home teams in the NBA (from 2003-2019) won more games and scored more points than visiting teams. According to my analysis, from 2003-2019 in the NBA, teams won about 19% more and scored about 3 more points on average when they played at home. One limit to my analysis was its limited time scope between 2003 and 2019. In the future, I would like to follow up this project with more historical analyses, post-COVID analysis (especially in a few years when there is more data), and analysis of the NBA Bubble during the pandemic. Looking at pandemic games would present analytical challenges (which is why I avoided it in this project), but also the opportunity to analyze games held under a wider variety of conditions than normal (i.e., with and without crowds). 
 
 Other than season and playoff, which I ruled out, I could not come up with any other potential confounding variables. However, I could be overlooking a key confounding variable, which is another potential limitation of my analysis and threat to inference. All of the other factors at play that I brainstormed were not truly confounders, but rather contributors to the home court advantage. For example, as I mentioned in the introduction, visiting teams may be more tired from travel or unforgiving scheduling. I believe that these types of factors that are directly tied to playing at home, even if impactful, would not disprove my argument that teams do better when they play at home. Instead, they represent causes of the advantage and areas for further research. Quantifying the home court advantage is the first step; the next step is asking why it exists (and potentially how it can be minimized). Researchers have made progressive on these questions, but they are still contested and merit further inquiry (Moskowitz & Wertheim, 2012, p. 116-167).
 
